--- a/config/database.yml
+++ b/config/database.yml
@@ -3,56 +3,56 @@
 #
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
-development:
-  adapter: sqlite3
-  database: db/development.sqlite3
-  pool: 5
-  timeout: 5000
-
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
-test:
-  adapter: sqlite3
-  database: db/test.sqlite3
-  pool: 5
-  timeout: 5000
-
-production:
-  adapter: sqlite3
-  database: db/production.sqlite3
-  pool: 5
-  timeout: 5000
-
 # development:
-#   adapter: mysql2
-#   encoding: utf8
-#   reconnect: false
-#   database: armory_development
+#   adapter: sqlite3
+#   database: db/development.sqlite3
 #   pool: 5
-#   username: root
-#   password:
-#   host: localhost
+#   timeout: 5000
 
 # # Warning: The database defined as "test" will be erased and
 # # re-generated from your development database when you run "rake".
 # # Do not set this db to the same as development or production.
 # test:
-#   adapter: mysql2
-#   encoding: utf8
-#   reconnect: false
-#   database: armory_test
+#   adapter: sqlite3
+#   database: db/test.sqlite3
 #   pool: 5
-#   username: root
-#   password:
-#   host: localhost
+#   timeout: 5000
 
 # production:
-#   adapter: mysql2
-#   encoding: utf8
-#   reconnect: false
-#   database: armory_production
+#   adapter: sqlite3
+#   database: db/production.sqlite3
 #   pool: 5
-#   username: root
-#   password:
-#   host: localhost
+#   timeout: 5000
+
+development:
+  adapter: mysql2
+  encoding: utf8
+  reconnect: false
+  database: armory_development
+  pool: 5
+  username: root
+  password: weihao
+  host: localhost
+
+# Warning: The database defined as "test" will be erased and
+# re-generated from your development database when you run "rake".
+# Do not set this db to the same as development or production.
+test:
+  adapter: mysql2
+  encoding: utf8
+  reconnect: false
+  database: armory_test
+  pool: 5
+  username: root
+  password: weihao
+  host: localhost
+
+production:
+  adapter: mysql2
+  encoding: utf8
+  reconnect: false
+  database: armory_production
+  pool: 5
+  username: root
+  password: weihao
+  host: localhost
