--- a/config/database.yml
+++ b/config/database.yml
@@ -31,7 +31,7 @@ development:
   database: armory_development
   pool: 5
   username: root
-  password: weihao
+  password: 
   host: localhost
 
 # Warning: The database defined as "test" will be erased and
@@ -44,7 +44,7 @@ test:
   database: armory_test
   pool: 5
   username: root
-  password: weihao
+  password: 
   host: localhost
 
 production:
