--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -13,7 +13,7 @@ server {
     # add_header Cache-Control public;
   }
 
-  try_files $uri/index.html @unicorn;
+  try_files $uri/index.html $url @unicorn;
   location @unicorn {
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header Host $http_host;
